test/isabelle/negative-tests/empty-type.p
module Empty {

  // Isabelle doesn't have the empty type

  e: empty

  // another test for empty type

  val handle_empty: empty -> int

}